--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.6",
     "vite": "^4.1.0",
+    "vite-plugin-partial": "^1.0.0",
     "vite-plugin-qrcode": "^0.2.1"
   },
   "dependencies": {
